# secure-messaging

./: .gitignore  CMakeLists.txt  Makefile  test.sh
apps/: CMakeLists.txt  client.cpp  server.cpp
docs/: hierarchy.txt  spec.txt  todo.txt
include/: AccountRegistry.h  AsymCryptHandler.h  Client.h  ClientCLI.h  ClientSession.h  ConsoleLog.h  CryptHandler.h  Logger.h  Message.h  SecureChannel.h  Server.h  SessionManager.h  SymCryptHandler.h  TcpSocket.h
src/: AccountRegistry.cpp  AsymCryptHandler.cpp  CMakeLists.txt  Client.cpp  ClientCLI.cpp  ClientSession.cpp  ConsoleLog.cpp  CryptHandler.cpp  Logger.cpp  Message.cpp  SecureChannel.cpp  Server.cpp  SessionManager.cpp  SymCryptHandler.cpp  TcpSocket.cpp  ThreadPool.cpp  main.cpp
src/Client/: CMakeLists.txt  Client.cpp  Client.h  ClientCLI.cpp  ClientCLI.h  MessageBuilder.cpp  MessageBuilder.h
src/Crypto/: CMakeLists.txt  Hash.cpp  Hash.h  KeyAgreement.cpp  KeyAgreement.h  SecureKey.cpp  SecureKey.h
src/Logging/: CMakeLists.txt  ConsoleLog.cpp  ConsoleLog.h  Logger.cpp  Logger.h
src/Messaging/: CMakeLists.txt  Message.h
src/Network/: CMakeLists.txt  IpAddress.cpp  IpAddress.h  Message.cpp  Message.h  SecureChannel.cpp  SecureChannel.h  Serialization.cpp  Serialization.h  TcpClient.cpp  TcpClient.h  TcpListener.cpp  TcpListener.h  TcpSocket.cpp  TcpSocket.h
src/Server/: AccountRegistry.cpp  AccountRegistry.h  CMakeLists.txt  Server.cpp  Server.h  SessionManager.cpp  SessionManager.h
src/Shared/: CMakeLists.txt  Global.h  Messages.cpp  Messages.h  TestUtils.hpp  ThreadPool.cpp  ThreadPool.h
src/client/: Client.cpp  Client.h  ClientCLI.cpp  ClientCLI.h  ClientSession.cpp  ClientSession.h  MessageBuilder.cpp  MessageBuilder.h
src/logging/: ConsoleLog.cpp  ConsoleLog.h  Logger.cpp
src/network/: Message.cpp  Message.h  SecureChannel.cpp  SecureChannel.h  TcpSocket.cpp
src/server/: AccountRegistry.cpp  AccountRegistry.h  Server.cpp  Server.h  SessionManager.cpp  SessionManager.h
src/shared/: TestUtils.hpp  ThreadPool.cpp  ThreadPool.h
tests/: CMakeLists.txt  asym.cpp  client.cpp  dh.cpp  disconnectingserver.cpp  handshake.cpp  largemessage.cpp  message.cpp  messages.cpp  secure_sockets.cpp  securekey.cpp  server.cpp  singlelogin.cpp  socket.cpp  sockets.cpp
